--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "history": "^3.0.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-router": "^2.6.1"
+    "react-router-dom": "^4.0.0-beta.6"
   }
 }
